<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/image_background"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/video_game_background_image"
        android:foreground="@drawable/blackout_foreground"
        app:siRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/person_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/photo_developer_team"
        app:siRadius="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/person_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_photo"/>

    <TextView
        android:id="@+id/positions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_positions"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/games_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/person_games_count_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positions"/>

    <TextView
        android:id="@+id/games_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/person_games_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/games_count_text"
        app:layout_constraintBottom_toBottomOf="@+id/games_count_text"/>

    <TextView
        android:id="@+id/video_game_one_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_one_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/games_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_one_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_one_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_one_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_one_text"/>

    <TextView
        android:id="@+id/video_game_two_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_two_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/video_game_one_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_two_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_two_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_two_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_two_text"/>

    <TextView
        android:id="@+id/video_game_three_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_video_game_three_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/video_game_two_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/video_game_three_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/store_video_game_three_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video_game_three_text"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_three_text"/>

</merge>