<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/blackout_foreground">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/video_game_image"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/video_game_background_image"
        app:siRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/video_game_platform_windows"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/windows_icon"
        app:layout_constraintTop_toBottomOf="@+id/video_game_image"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_ps"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/ps_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_windows"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_windows"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_windows"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_xbox"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/xbox_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_ps"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_ps"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_ps"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_nintendo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/nintendo_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_xbox"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_xbox"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_xbox"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_android"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/android_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_nintendo"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_nintendo"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_nintendo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_ios"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/ios_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_android"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_android"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_android"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/video_game_platform_linux"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:src="@drawable/linux_icon"
        app:layout_constraintTop_toTopOf="@+id/video_game_platform_ios"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_platform_ios"
        app:layout_constraintStart_toEndOf="@+id/video_game_platform_ios"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/video_game_metacritic_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metacritic_rating"
        android:textColor="#1FB50E"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/video_game_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/video_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_game_metacritic_rating" />

    <TextView
        android:id="@+id/video_game_release_date_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_release_date_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_game_title"/>

    <TextView
        android:id="@+id/video_game_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_release_date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/video_game_release_date_name"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_release_date_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/video_game_genres_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_genres_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/video_game_release_date_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/video_game_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_genres"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/video_game_genres_name"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_genres_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/video_game_stores_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_stores_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/video_game_genres_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/video_game_stores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/video_game_stores"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/video_game_stores_name"
        app:layout_constraintBottom_toBottomOf="@+id/video_game_stores_name"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>